# PredatorPrey

./: CMakeLists.txt  CellIcon.qml  amphiprion.cpp  amphiprion.h  bootstrapper.cpp  bootstrapper.h  cell.cpp  cell.h  common.h  fish.cpp  fish.h  gameboard.cpp  gameboard.h  gamemodel.cpp  gamemodel.h  generator.cpp  generator.h  main.cpp  main.qml  mediatorfishmotor.cpp  mediatorfishmotor.h  objectgame.cpp  objectgame.h  qml.qrc  resource.qrc  rock.cpp  rock.h  shark.cpp  shark.h
